[package]
name = "floyd-warshall-alg"
version = "0.1.3"
authors = ["Dalibor Matura <dalibor.matura@gmail.com>"]
edition = "2018"
description = "Floyd-Warshall algorithm supporting customization."
documentation = "https://docs.rs/floyd-warshall-alg"
homepage = "https://github.com/dalibor-matura/floyd-warshall-alg"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/dalibor-matura/floyd-warshall-alg"
keywords = ["floyd-warshall", "floyd", "warshall", "alg", "algorithm"]

[badges]
travis-ci = { repository = "dalibor-matura/floyd-warshall-alg", branch = "master" }
codecov = { repository = "dalibor-matura/floyd-warshall-alg", branch = "master", service = "github" }

[dependencies]
num-traits = "0.2"
safe-graph = "0.1.4"
